fluxcd/infrastructure/configs/donetick-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: donetick-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: donetick
  ports:
    - port: 2021
      targetPort: 2021
      nodePort: 32021
