fluxcd/infrastructure/configs/donetick-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: donetick-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: donetick
            port:
              number: 8080
